# blazing_fibonacci

./: .README.md.kate-swp  Cargo.toml  LICENSE  README.md  TESTFIB.txt
benches/: benchmark.rs
src/: lib.rs  main.rs
