[package]
name = "fast_fibonacci"
version = "0.1.0"
edition = "2021"
authors = ["Alex Curtis <alexcu@tutanota.com>"]
description = "A fast Fibonacci number calculator using matrix exponentiation."
license = "MIT"
repository = "https://github.com/your-repo-link" # Replace with your actual GitHub link

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"


