[package]
name = "blazing_fibonacci"
version = "0.2.5"
edition = "2021"
authors = ["Alex Curtis <alexcu@tutanota.com>"]
description = "A fast Fibonacci number calculator using matrix exponentiation and fast doubling."
license = "MIT"
repository = "https://github.com/alexcu2718/blazing_fibonacci"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rug = "1.27.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
